--- a/htaccess/.htaccess
+++ b/htaccess/.htaccess
@@ -1,6 +1,6 @@
 # CIDRAM default signature files converted to htaccess format.
 # Source: https://github.com/CIDRAM/Exports/tree/master/htaccess
-# This file last updated: 2020.01.01
+# This file last updated: 2020.01.03
 #
 Order Allow,Deny
 Deny from 0.0.0.0/8
@@ -1836,9 +1836,10 @@ Deny from 31.31.96.0/19
 Deny from 31.31.192.0/20
 Deny from 31.40.200.0/24
 Deny from 31.40.202.0/24
-Deny from 31.40.212.0/22
+Deny from 31.40.208.0/21
 Deny from 31.40.224.0/22
 Deny from 31.40.250.0/23
+Deny from 31.40.252.0/22
 Deny from 31.41.32.0/21
 Deny from 31.41.152.0/21
 Deny from 31.41.216.0/21
@@ -2046,7 +2047,7 @@ Deny from 37.44.212.0/24
 Deny from 37.44.215.0/24
 Deny from 37.44.216.0/22
 Deny from 37.44.228.0/22
-Deny from 37.44.252.0/23
+Deny from 37.44.252.0/22
 Deny from 37.46.112.0/20
 Deny from 37.46.128.0/21
 Deny from 37.46.200.0/21
@@ -3276,8 +3277,12 @@ Deny from 45.79.12.0/23
 Deny from 45.79.14.0/24
 Deny from 45.79.16.0/20
 Deny from 45.79.32.0/19
-Deny from 45.79.64.0/18
-Deny from 45.79.128.0/17
+Deny from 45.79.64.0/19
+Deny from 45.79.96.0/20
+Deny from 45.79.112.0/22
+Deny from 45.79.128.0/18
+Deny from 45.79.192.0/19
+Deny from 45.79.224.0/21
 Deny from 45.80.48.0/22
 Deny from 45.80.64.0/22
 Deny from 45.80.104.0/22
@@ -3464,7 +3469,6 @@ Deny from 45.90.244.0/22
 Deny from 45.91.9.0/24
 Deny from 45.91.24.0/21
 Deny from 45.91.64.0/24
-Deny from 45.91.72.0/24
 Deny from 45.91.93.0/24
 Deny from 45.91.94.0/24
 Deny from 45.91.100.0/22
@@ -4085,7 +4089,6 @@ Deny from 45.146.220.0/22
 Deny from 45.147.1.0/24
 Deny from 45.147.2.0/23
 Deny from 45.147.4.0/24
-Deny from 45.147.7.0/24
 Deny from 45.147.8.0/22
 Deny from 45.147.16.0/24
 Deny from 45.147.18.0/23
@@ -6353,9 +6356,6 @@ Deny from 64.235.59.0/24
 Deny from 64.235.60.0/24
 Deny from 64.235.63.0/24
 Deny from 64.237.32.0/19
-Deny from 64.237.101.0/24
-Deny from 64.237.107.0/24
-Deny from 64.237.108.0/24
 Deny from 64.238.2.0/23
 Deny from 64.238.4.0/22
 Deny from 64.238.144.0/20
@@ -6538,6 +6538,7 @@ Deny from 66.85.72.0/21
 Deny from 66.85.89.0/24
 Deny from 66.85.92.0/22
 Deny from 66.85.128.0/18
+Deny from 66.90.64.0/18
 Deny from 66.96.80.0/20
 Deny from 66.96.128.0/18
 Deny from 66.97.32.0/20
@@ -6710,6 +6711,7 @@ Deny from 67.96.24.0/21
 Deny from 67.131.232.0/24
 Deny from 67.154.188.0/22
 Deny from 67.158.216.0/21
+Deny from 67.159.0.0/18
 Deny from 67.159.192.0/24
 Deny from 67.159.203.0/24
 Deny from 67.192.0.0/16
@@ -7234,6 +7236,7 @@ Deny from 74.50.48.0/20
 Deny from 74.50.64.0/18
 Deny from 74.52.0.0/14
 Deny from 74.63.32.0/19
+Deny from 74.63.64.0/18
 Deny from 74.63.192.0/18
 Deny from 74.82.0.0/18
 Deny from 74.82.160.0/19
@@ -7350,6 +7353,7 @@ Deny from 75.127.77.0/24
 Deny from 75.127.96.0/23
 Deny from 75.151.213.85/32
 Deny from 76.12.0.0/16
+Deny from 76.73.0.0/17
 Deny from 76.74.61.0/24
 Deny from 76.76.17.0/24
 Deny from 76.77.144.0/20
@@ -7900,6 +7904,7 @@ Deny from 80.88.80.0/20
 Deny from 80.89.137.214/32
 Deny from 80.89.139.0/24
 Deny from 80.90.192.0/20
+Deny from 80.91.70.0/24
 Deny from 80.91.73.0/24
 Deny from 80.92.34.0/23
 Deny from 80.92.64.0/19
@@ -8002,6 +8007,7 @@ Deny from 81.2.6.0/23
 Deny from 81.2.44.0/23
 Deny from 81.2.48.0/23
 Deny from 81.2.56.0/21
+Deny from 81.2.149.0/24
 Deny from 81.2.192.0/18
 Deny from 81.4.64.0/18
 Deny from 81.5.0.0/18
@@ -8239,7 +8245,7 @@ Deny from 83.171.204.0/22
 Deny from 83.171.212.0/22
 Deny from 83.171.224.0/22
 Deny from 83.171.232.0/21
-Deny from 83.171.252.0/23
+Deny from 83.171.252.0/22
 Deny from 83.172.60.0/22
 Deny from 83.175.0.0/18
 Deny from 83.214.0.0/16
@@ -8331,6 +8337,8 @@ Deny from 84.54.28.0/22
 Deny from 84.54.36.0/22
 Deny from 84.54.48.0/24
 Deny from 84.54.53.0/24
+Deny from 84.54.56.0/23
+Deny from 84.54.58.0/24
 Deny from 84.54.209.0/24
 Deny from 84.54.211.0/24
 Deny from 84.54.219.0/24
@@ -8732,7 +8740,6 @@ Deny from 87.239.8.0/21
 Deny from 87.239.104.0/21
 Deny from 87.239.128.0/21
 Deny from 87.239.144.0/21
-Deny from 87.239.254.0/24
 Deny from 87.242.64.0/18
 Deny from 87.246.64.0/18
 Deny from 87.246.128.0/20
@@ -12385,7 +12392,7 @@ Deny from 104.140.200.0/22
 Deny from 104.140.208.0/20
 Deny from 104.140.224.0/19
 Deny from 104.143.0.0/22
-Deny from 104.143.8.0/21
+Deny from 104.143.10.0/23
 Deny from 104.143.16.0/20
 Deny from 104.143.32.0/22
 Deny from 104.143.38.0/24
@@ -12640,11 +12647,11 @@ Deny from 104.238.58.0/24
 Deny from 104.238.60.0/22
 Deny from 104.238.64.0/18
 Deny from 104.238.128.0/18
-Deny from 104.238.192.0/20
+Deny from 104.238.192.0/21
+Deny from 104.238.204.0/22
 Deny from 104.238.210.0/23
 Deny from 104.238.216.0/23
 Deny from 104.238.220.0/22
-Deny from 104.238.226.0/23
 Deny from 104.238.228.0/22
 Deny from 104.238.234.0/23
 Deny from 104.238.248.0/22
@@ -13065,7 +13072,6 @@ Deny from 107.191.96.0/20
 Deny from 107.191.114.0/23
 Deny from 107.191.116.0/22
 Deny from 107.191.120.0/21
-Deny from 107.191.176.0/23
 Deny from 107.191.180.0/22
 Deny from 107.191.184.0/21
 Deny from 108.59.0.0/20
@@ -15571,6 +15577,7 @@ Deny from 141.193.96.0/22
 Deny from 141.193.152.0/21
 Deny from 141.193.188.0/23
 Deny from 141.193.202.0/23
+Deny from 141.193.250.0/24
 Deny from 141.193.253.0/24
 Deny from 141.193.254.0/24
 Deny from 141.226.80.0/23
@@ -15614,6 +15621,7 @@ Deny from 142.111.0.0/16
 Deny from 142.147.104.0/21
 Deny from 142.202.41.0/24
 Deny from 142.202.42.0/23
+Deny from 142.202.138.0/23
 Deny from 142.202.204.0/24
 Deny from 142.234.8.0/21
 Deny from 142.234.16.0/20
@@ -16010,7 +16018,6 @@ Deny from 149.13.31.0/24
 Deny from 149.13.67.0/24
 Deny from 149.13.71.0/24
 Deny from 149.13.73.0/24
-Deny from 149.13.91.0/24
 Deny from 149.13.114.0/24
 Deny from 149.13.121.0/24
 Deny from 149.13.122.0/23
@@ -16323,12 +16330,11 @@ Deny from 154.17.148.0/23
 Deny from 154.17.152.0/22
 Deny from 154.17.156.0/23
 Deny from 154.17.160.0/21
-Deny from 154.17.208.0/22
-Deny from 154.17.212.0/24
-Deny from 154.17.214.0/23
-Deny from 154.17.216.0/21
+Deny from 154.17.208.0/20
 Deny from 154.17.224.0/20
 Deny from 154.17.248.0/22
+Deny from 154.17.252.0/24
+Deny from 154.17.254.0/23
 Deny from 154.18.0.0/15
 Deny from 154.21.0.0/16
 Deny from 154.22.0.0/23
@@ -16444,7 +16450,20 @@ Deny from 155.254.32.0/22
 Deny from 155.254.48.0/23
 Deny from 155.254.52.0/22
 Deny from 155.254.56.0/22
-Deny from 155.254.96.0/19
+Deny from 155.254.96.0/23
+Deny from 155.254.99.0/24
+Deny from 155.254.100.0/22
+Deny from 155.254.104.0/24
+Deny from 155.254.108.0/23
+Deny from 155.254.111.0/24
+Deny from 155.254.112.0/23
+Deny from 155.254.115.0/24
+Deny from 155.254.117.0/24
+Deny from 155.254.118.0/24
+Deny from 155.254.120.0/24
+Deny from 155.254.122.0/23
+Deny from 155.254.124.0/23
+Deny from 155.254.126.0/24
 Deny from 155.254.235.0/24
 Deny from 156.38.128.0/17
 Deny from 156.43.59.0/24
@@ -16938,6 +16957,7 @@ Deny from 162.244.52.0/22
 Deny from 162.244.76.0/22
 Deny from 162.244.80.0/22
 Deny from 162.244.92.0/22
+Deny from 162.244.112.0/21
 Deny from 162.244.132.0/22
 Deny from 162.244.144.0/21
 Deny from 162.244.164.0/24
@@ -17074,7 +17094,6 @@ Deny from 163.254.0.0/16
 Deny from 164.6.0.0/16
 Deny from 164.40.188.0/22
 Deny from 164.52.0.0/17
-Deny from 164.52.148.0/22
 Deny from 164.52.200.0/21
 Deny from 164.68.96.0/19
 Deny from 164.79.0.0/16
@@ -17382,7 +17401,6 @@ Deny from 169.239.152.0/22
 Deny from 169.239.180.0/22
 Deny from 169.239.204.0/22
 Deny from 169.239.224.0/22
-Deny from 170.0.12.0/22
 Deny from 170.0.232.0/22
 Deny from 170.10.160.0/20
 Deny from 170.52.60.0/22
@@ -17646,7 +17664,9 @@ Deny from 172.104.224.0/19
 Deny from 172.105.0.0/17
 Deny from 172.105.134.0/23
 Deny from 172.105.144.0/23
+Deny from 172.105.148.0/22
 Deny from 172.105.152.0/21
+Deny from 172.105.160.0/19
 Deny from 172.105.192.0/18
 Deny from 172.106.0.0/20
 Deny from 172.106.16.0/22
@@ -17754,7 +17774,6 @@ Deny from 172.255.144.0/20
 Deny from 172.255.160.0/20
 Deny from 172.255.184.0/21
 Deny from 172.255.192.0/18
-Deny from 173.0.0.0/20
 Deny from 173.0.51.0/24
 Deny from 173.0.52.0/24
 Deny from 173.0.63.0/24
@@ -18313,6 +18332,7 @@ Deny from 178.20.208.0/22
 Deny from 178.21.8.0/24
 Deny from 178.21.10.0/23
 Deny from 178.21.16.0/21
+Deny from 178.21.32.0/24
 Deny from 178.22.64.0/21
 Deny from 178.23.80.0/21
 Deny from 178.32.0.0/15
@@ -18512,7 +18532,6 @@ Deny from 178.255.241.0/24
 Deny from 179.33.108.0/23
 Deny from 179.43.112.0/20
 Deny from 179.43.128.0/18
-Deny from 179.51.192.0/20
 Deny from 179.60.144.0/24
 Deny from 179.60.146.0/23
 Deny from 179.60.176.0/21
@@ -19976,7 +19995,6 @@ Deny from 185.156.176.0/22
 Deny from 185.157.40.0/22
 Deny from 185.157.48.0/23
 Deny from 185.157.83.0/24
-Deny from 185.157.163.0/24
 Deny from 185.157.176.0/22
 Deny from 185.157.208.0/22
 Deny from 185.157.220.0/22
@@ -20055,7 +20073,7 @@ Deny from 185.166.236.0/23
 Deny from 185.166.239.0/24
 Deny from 185.167.0.0/22
 Deny from 185.167.4.0/24
-Deny from 185.167.6.0/24
+Deny from 185.167.6.0/23
 Deny from 185.167.64.0/21
 Deny from 185.167.116.0/22
 Deny from 185.167.177.0/24
@@ -20344,7 +20362,7 @@ Deny from 185.196.23.0/24
 Deny from 185.196.24.0/22
 Deny from 185.196.96.0/22
 Deny from 185.196.100.0/24
-Deny from 185.196.136.0/23
+Deny from 185.196.137.0/24
 Deny from 185.196.188.0/22
 Deny from 185.196.202.0/24
 Deny from 185.196.204.0/22
@@ -21741,7 +21759,6 @@ Deny from 192.121.245.0/24
 Deny from 192.121.247.0/24
 Deny from 192.124.18.0/24
 Deny from 192.124.119.0/24
-Deny from 192.126.92.0/22
 Deny from 192.126.112.0/20
 Deny from 192.126.128.0/17
 Deny from 192.129.128.0/17
@@ -21866,6 +21883,7 @@ Deny from 192.188.253.0/24
 Deny from 192.189.2.0/24
 Deny from 192.189.4.0/24
 Deny from 192.189.27.0/24
+Deny from 192.190.19.0/24
 Deny from 192.190.42.0/23
 Deny from 192.190.47.0/24
 Deny from 192.190.49.0/24
@@ -21938,6 +21956,7 @@ Deny from 192.234.214.0/24
 Deny from 192.236.128.0/17
 Deny from 192.237.128.0/17
 Deny from 192.238.128.0/17
+Deny from 192.240.96.0/19
 Deny from 192.240.152.0/21
 Deny from 192.240.160.0/20
 Deny from 192.240.176.0/21
@@ -22756,7 +22775,11 @@ Deny from 194.76.134.0/23
 Deny from 194.76.136.0/22
 Deny from 194.76.146.0/23
 Deny from 194.76.154.0/23
+Deny from 194.76.192.0/24
+Deny from 194.76.217.0/24
+Deny from 194.76.218.0/24
 Deny from 194.76.224.0/24
+Deny from 194.76.238.0/24
 Deny from 194.79.28.0/22
 Deny from 194.79.60.0/22
 Deny from 194.85.32.0/20
@@ -23606,6 +23629,7 @@ Deny from 198.148.212.0/24
 Deny from 198.151.16.0/20
 Deny from 198.151.64.0/18
 Deny from 198.151.152.0/22
+Deny from 198.153.70.0/24
 Deny from 198.154.80.0/20
 Deny from 198.154.96.0/19
 Deny from 198.154.192.0/18
@@ -24905,7 +24929,8 @@ Deny from 206.0.0.0/15
 Deny from 206.2.0.0/16
 Deny from 206.3.32.0/19
 Deny from 206.3.64.0/18
-Deny from 206.3.139.0/24
+Deny from 206.3.128.0/17
+Deny from 206.4.0.0/14
 Deny from 206.41.108.0/24
 Deny from 206.41.160.0/19
 Deny from 206.51.29.0/24
@@ -24986,6 +25011,7 @@ Deny from 206.191.192.0/19
 Deny from 206.195.224.0/19
 Deny from 206.196.96.0/19
 Deny from 206.197.28.0/23
+Deny from 206.197.34.0/24
 Deny from 206.197.77.0/24
 Deny from 206.197.165.0/24
 Deny from 206.198.37.0/24
@@ -25025,7 +25051,7 @@ Deny from 206.225.217.0/24
 Deny from 206.225.219.0/24
 Deny from 206.226.0.0/18
 Deny from 206.227.64.0/18
-Deny from 206.234.191.0/24
+Deny from 206.232.0.0/14
 Deny from 206.236.0.0/15
 Deny from 206.238.0.0/16
 Deny from 206.251.192.0/20
@@ -25172,7 +25198,7 @@ Deny from 208.12.64.0/19
 Deny from 208.19.224.0/20
 Deny from 208.43.0.0/16
 Deny from 208.51.60.0/22
-Deny from 208.64.24.0/21
+Deny from 208.53.128.0/18
 Deny from 208.64.56.0/21
 Deny from 208.64.120.0/21
 Deny from 208.64.136.0/21
@@ -26098,8 +26124,7 @@ Deny from 213.159.208.0/21
 Deny from 213.163.64.0/19
 Deny from 213.165.64.0/19
 Deny from 213.165.128.0/19
-Deny from 213.166.64.0/21
-Deny from 213.166.72.0/22
+Deny from 213.166.64.0/20
 Deny from 213.166.80.0/24
 Deny from 213.166.84.0/22
 Deny from 213.166.88.0/22
@@ -26442,6 +26467,7 @@ Deny from 216.223.0.0/18
 Deny from 216.223.160.0/19
 Deny from 216.224.64.0/19
 Deny from 216.224.112.0/20
+Deny from 216.227.128.0/18
 Deny from 216.227.208.0/23
 Deny from 216.227.211.0/24
 Deny from 216.227.212.0/22
@@ -27064,7 +27090,7 @@ Deny from 2001:504:3c::/48
 Deny from 2001:506:30::/48
 Deny from 2001:518::/32
 Deny from 2001:550:101::/48
-Deny from 2001:550:407::/48
+Deny from 2001:550:408::/48
 Deny from 2001:550:a0e:8000::/49
 Deny from 2001:550:1500::/48
 Deny from 2001:550:1d01::/48
@@ -27078,14 +27104,15 @@ Deny from 2001:550:221e::/48
 Deny from 2001:550:2603::/48
 Deny from 2001:550:2604::/48
 Deny from 2001:550:2801::/48
-Deny from 2001:550:3d01::/48
 Deny from 2001:550:3d06::/48
 Deny from 2001:550:4600::/48
+Deny from 2001:550:4a01::/64
 Deny from 2001:550:5607::/48
 Deny from 2001:550:5c03::/48
-Deny from 2001:550:5c04::/48
 Deny from 2001:550:7709::/48
+Deny from 2001:550:9801::/48
 Deny from 2001:550:9802::/48
+Deny from 2001:550:aa01::/48
 Deny from 2001:590:1:102::/64
 Deny from 2001:590:1:300::/62
 Deny from 2001:590:1:304::/64
@@ -27202,26 +27229,21 @@ Deny from 2001:8d8::/32
 Deny from 2001:920:184b::/48
 Deny from 2001:920:380c::/48
 Deny from 2001:920:7015::/48
-Deny from 2001:978:902::/48
 Deny from 2001:978:907::/48
+Deny from 2001:978:a01:8000::/49
 Deny from 2001:978:f00::/48
 Deny from 2001:978:1403::/48
 Deny from 2001:978:1404::/47
-Deny from 2001:978:1d02::/48
-Deny from 2001:978:1e00:100::/56
 Deny from 2001:978:2102::/48
 Deny from 2001:978:2305::/48
-Deny from 2001:978:2307::/48
 Deny from 2001:978:2309::/48
 Deny from 2001:978:230b::/48
 Deny from 2001:978:3400::/48
 Deny from 2001:978:3901::/48
 Deny from 2001:978:3c0a::/47
-Deny from 2001:978:5400::/48
-Deny from 2001:978:6711::/48
+Deny from 2001:978:6713::/48
 Deny from 2001:978:a501::/48
 Deny from 2001:978:ae00::/48
-Deny from 2001:978:b300::/48
 Deny from 2001:978:b600::/48
 Deny from 2001:978:b700::/48
 Deny from 2001:9d8::/32
@@ -27239,7 +27261,6 @@ Deny from 2001:df0:bc::/48
 Deny from 2001:df0:fc00::/48
 Deny from 2001:df1:800::/47
 Deny from 2001:df1:6800::/48
-Deny from 2001:df1:6e80::/48
 Deny from 2001:df2:7900::/48
 Deny from 2001:df2:c600::/48
 Deny from 2001:df2:ca00::/48
@@ -27662,16 +27683,28 @@ Deny from 2001:48c8::/32
 Deny from 2001:49e8::/32
 Deny from 2001:49f0:2920::/48
 Deny from 2001:49f0:a000::/36
-Deny from 2001:49f0:d000::/44
+Deny from 2001:49f0:d001::/48
+Deny from 2001:49f0:d002::/47
+Deny from 2001:49f0:d004::/46
+Deny from 2001:49f0:d008::/47
+Deny from 2001:49f0:d00a::/48
+Deny from 2001:49f0:d00c::/47
+Deny from 2001:49f0:d00e::/48
 Deny from 2001:49f0:d010::/45
 Deny from 2001:49f0:d018::/48
 Deny from 2001:49f0:d01a::/47
 Deny from 2001:49f0:d01c::/46
-Deny from 2001:49f0:d020::/44
+Deny from 2001:49f0:d020::/48
+Deny from 2001:49f0:d022::/47
+Deny from 2001:49f0:d024::/46
+Deny from 2001:49f0:d028::/45
 Deny from 2001:49f0:d030::/46
 Deny from 2001:49f0:d034::/47
 Deny from 2001:49f0:d03f::/48
-Deny from 2001:49f0:d040::/44
+Deny from 2001:49f0:d040::/45
+Deny from 2001:49f0:d048::/47
+Deny from 2001:49f0:d04a::/48
+Deny from 2001:49f0:d04c::/46
 Deny from 2001:49f0:d050::/46
 Deny from 2001:49f0:d054::/47
 Deny from 2001:49f0:d057::/48
@@ -27683,7 +27716,7 @@ Deny from 2001:49f0:d08a::/47
 Deny from 2001:49f0:d08c::/46
 Deny from 2001:49f0:d090::/45
 Deny from 2001:49f0:d098::/49
-Deny from 2001:49f0:d099::/49
+Deny from 2001:49f0:d099::/48
 Deny from 2001:49f0:d09a::/48
 Deny from 2001:49f0:d09c::/47
 Deny from 2001:49f0:d09e::/48
@@ -27703,6 +27736,7 @@ Deny from 2001:49f0:d0d4::/47
 Deny from 2001:49f0:d0d7::/48
 Deny from 2001:49f0:d0d8::/48
 Deny from 2001:49f0:d0dd::/48
+Deny from 2001:49f0:d0df::/48
 Deny from 2001:4b60:100::/48
 Deny from 2001:4b78::/29
 Deny from 2001:4ba0::/31
@@ -27740,8 +27774,7 @@ Deny from 2400:8100::/32
 Deny from 2400:8240::/32
 Deny from 2400:8901::/32
 Deny from 2400:8902::/31
-Deny from 2400:8904::/31
-Deny from 2400:8906::/32
+Deny from 2400:8904::/30
 Deny from 2400:8b00:100::/42
 Deny from 2400:8b00:200::/42
 Deny from 2400:8b00:300::/42
@@ -29299,6 +29332,7 @@ Deny from 2602:ffb0:7::/48
 Deny from 2602:ffb0:11::/48
 Deny from 2602:ffb0:1b::/48
 Deny from 2602:ffb0:29::/48
+Deny from 2602:ffb1:60::/48
 Deny from 2602:ffb6::/36
 Deny from 2602:ffbb::/36
 Deny from 2602:ffc5::/41
@@ -29783,7 +29817,6 @@ Deny from 2620:11::/45
 Deny from 2620:11:8::/47
 Deny from 2620:15:6000::/48
 Deny from 2620:64:6000::/48
-Deny from 2620:77:6000::/48
 Deny from 2620:100:5007::/48
 Deny from 2620:101:402d::/48
 Deny from 2620:101:4034::/47
@@ -31151,7 +31184,6 @@ Deny from 2a07:a343:e0f0::/44
 Deny from 2a07:a343:f210::/44
 Deny from 2a07:a347::/32
 Deny from 2a07:a6c0::/29
-Deny from 2a07:a880:1416::/48
 Deny from 2a07:a980::/32
 Deny from 2a07:ac80::/29
 Deny from 2a07:ae80::/29
@@ -31237,7 +31269,6 @@ Deny from 2a0a:54c0::/29
 Deny from 2a0a:5980::/29
 Deny from 2a0a:5dc0::/29
 Deny from 2a0a:6700::/45
-Deny from 2a0a:6d40::/29
 Deny from 2a0a:6f80::/32
 Deny from 2a0a:7107:1af4::/48
 Deny from 2a0a:7a05::/32
@@ -31561,6 +31592,8 @@ Deny from 2a0f:2c80::/48
 Deny from 2a0f:3000::/29
 Deny from 2a0f:4a80::/48
 Deny from 2a0f:5100:a01::/48
+Deny from 2a0f:5140::/31
+Deny from 2a0f:5944::/31
 Deny from 2a0f:5e80::/29
 Deny from 2a0f:8600::/48
 Deny from 2a0f:9400:8005::/48
